# quircs

./: Cargo.toml
src/: decode.rs  error.rs  identify.rs  lib.rs  quirc.rs
