[package]
name = "quircs"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
version = "0.10.0"
license = "MIT"
documentation = "https://docs.rs/qurics/"
repository = "https://github.com/dignifiedquire/quircs"
homepage = "https://github.com/dignifiedquire/quircs"
description = "QR code detection and scanning. Pure Rust."
readme = "README.md"
edition = "2018"

keywords = ["qr", "scanner"]
categories = ["encoding", "multimedia"]
exclude = ["tests"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-derive = { version = "0.3.0", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
ink_prelude = { version = "3.0.0-rc9", default-features = false }
ink_env = { version = "3.0.0-rc9", default-features = false }
ink_allocator = { version = "3.0.0-rc9", default-features = false }
fixed = { version = "1.15.0", default-features = false }
fixed-macro = { git = "https://github.com/kvinwang/fixed-macro", branch = "master", version = "1.1.1", default-features = false }

[dev-dependencies]
image = "0.23.4"


